--- a/index.html
+++ b/index.html
@@ -54,25 +54,48 @@
           
         </div><!--/.navbar-collapse -->
       </div>
+	  
+	  
+	  
     </div>
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Welcome to Square Day!</h1>
-        <p>Add a new day to get started</p>
-        <p><a class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-      </div>
-    </div>
-
+	
+	<div class="container">
+		<form class="navbar-form navbar-left" role="search">
+		  <div class="form-group">
+		    <input type="text" class="form-control" placeholder="Where are you?">
+		  </div>
+		  <button type="submit" class="btn btn-default">Go</button>
+		</form>
+	
+	
+	</div>
+	
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
-        </div>
+			<div class="panel panel-default">
+			  <!-- Default panel contents -->
+			  <div class="panel-heading"> <div class="form-group">
+				  <input type="text" class="form-control" placeholder="Your Square Day">
+			  </div>
+			  <button type="submit" class="btn btn-default"> Submit </button>
+		  </form>
+			  </div>
+			  <div class="panel-body">
+			    <p>Add your items & reorganize</p>
+			  </div>
+
+			  <!-- List group -->
+			  <div class="list-group">
+			    <a href="#" class="list-group-item"> Cras justo odio</a>
+			     <a href="#" class="list-group-item"> Cras justo odio</a>
+				  <a href="#" class="list-group-item"> Cras justo odio</a>
+				   <a href="#" class="list-group-item"> Cras justo odio</a>
+				   
+			  </div>
+			</div>
+		</div>
       </div>
 
       <hr>
