--- a/index_neel.html
+++ b/index_neel.html
@@ -1,14 +1,76 @@
 <html> 
-<head> 
-    <title>TweetDive</title>
-	<script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <style>
+            body {
+                padding-top: 50px;
+                padding-bottom: 20px;
+            }
+        </style>
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="css/main.css">
+
+        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+		<script src="js/vendor/jquery-1.10.1.js"></script>
+		<script src="js/main.js" type="text/javascript"></script>
+	
 </head>
 <body>
+    <body>
+        <!--[if lt IE 7]>
+            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+        <![endif]-->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Square Day</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">My SquareDays <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">New Day+</a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header">My Days</li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </li>
+          </ul>
+          
+        </div><!--/.navbar-collapse -->
+      </div>
+  </div>
 
+	<div class="col-lg-4">
+		<div class="container" id="list">
+		<div class="row">	
+			
+		<div class=panel panel-default>	
 
-<h1>Location</h1><input type=text name=location>
-<h1>Name</h1><input type=text name=name id="venueName">
+		<h1>Location</h1><input type=text name=location id="venueLocation">
+		<h1>Name</h1><input type=text name=name id="venueName">
 
-<ul id="venueList"></body>
+		<ul id="venueList"></body>
+		</div>
+		</div>
+	</div>
