--- a/index_neel.html
+++ b/index_neel.html
@@ -23,6 +23,7 @@
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 		<script src="js/vendor/jquery-1.10.1.js"></script>
+		<script src="js/vendor/parse-1.2.13.min.js"></script>
 		<script src="js/main.js" type="text/javascript"></script>
 	
 </head>
