--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<script src="js/main.js" type="text/javascript">
 </script>
 
-		<script src="parse-1.2.13.min.js"></script>
+		<script src="js/vendor/parse-1.2.13.min.js"></script>
 		
 	</head>
 	<body>
