--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 		<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js" type="text/javascript">
 </script>
 		<script src="js/vendor/jquery-1.10.1.js" type="text/javascript">
-</script>
+		</script>
+		<script src="js/vendor/parse-1.2.13.min.js"></script>
 		<script src="js/main.js" type="text/javascript">
 </script>
 
-		<script src="js/vendor/parse-1.2.13.min.js"></script>
+		
 		
 	</head>
 	<body>
@@ -101,6 +102,7 @@
 			
 			<div class="list-group" id="itin-list">
 				<ul id="itinList">
+					<h4 class="list-group-item-heading">MY Itineraries</h4>
 				</ul>
 			</div>
 		</div>
