--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			}
 		</style>
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
+		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
 		<link rel="stylesheet" href="css/main.css" type="text/css">
 		<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js" type="text/javascript">
 </script>
