--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
 		</style>
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
+		 <link type="text/css" href="css/bootstrap-timepicker.min.css" />
 		<link rel="stylesheet" href="css/main.css" type="text/css">
+		
 		<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js" type="text/javascript">
 </script>
 		<script src="js/vendor/jquery-1.10.1.js" type="text/javascript"></script>
 		 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script src="js/vendor/parse-1.2.13.min.js"></script>
+		<script type="text/javascript" src="js/vendor/bootstrap-timepicker.min.js"></script>
 		<script src="js/main.js" type="text/javascript">
 </script>
 
@@ -111,6 +114,10 @@
 		
 		<div id="dialog" title="Basic dialog">
 		  <p>This is the default dialog</p>
+		  <div class="input-append bootstrap-timepicker">
+		             <input id="timepicker1" type="text" class="input-small">
+		             <span class="add-on"><i class="icon-time"></i></span>
+		         </div>
 		</div>
 		
 		<script>
@@ -125,7 +132,7 @@
 			$( '#venueList li' ).click(function( event ) {
 				$("#dialog").dialog();
 					//$( "#currItin" ).append("<li class='list-group-item'>" + $(this).text()) + "</li>";
-		  
+		  		         $('#timepicker1').timepicker();
 				});
 	
 		}
