--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 			}
 		</style>
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
-		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
 		 <link type="text/css" href="css/bootstrap-timepicker.min.css" />
+		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
+		
 		<link rel="stylesheet" href="css/main.css" type="text/css">
 		<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js" type="text/javascript"></script>
 		<script src="js/vendor/jquery-1.10.1.js" type="text/javascript"></script>
@@ -112,7 +113,7 @@
 	   		             <input id="timepicker2" type="text" class="input-small">
 	   		             <span class="add-on"><i class="icon-time"></i></span>
 	   		         </div>
-					 <a class="btn btn-primary btn-sm" role="button">Send</a></p>
+					 <a class="btn btn-primary btn-sm" role="button" id="sendVenue">Send</a></p>
 		</div>
 		
 		
