--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 								<li>
 									<a href="#">New Day+</a>
 								</li>
-								<li class="dropdown-header">My Days
+								<li class="dropdown-header">
+									My Days
 								</li>
 								<li>
 									<a href="#">Separated link</a>
