--- a/menu.html
+++ b/menu.html
@@ -10,61 +10,68 @@
 	<title></title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-	<style type="text/css">
+
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<style>
 	body {
 		padding-top: 50px;
 		padding-bottom: 20px;
 	}
 	</style>
-	<link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
+	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="css/main.css">
+	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
+	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 	<link type="text/css" href="css/bootstrap-timepicker.min.css" />
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
 	
 	<link rel="stylesheet" href="css/main.css" type="text/css">
-	<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js" type="text/javascript"></script>
-	<script src="js/vendor/jquery-1.10.1.js" type="text/javascript"></script>
-	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-	<script src="js/vendor/parse-1.2.13.min.js"></script>
-	<script type="text/javascript" src="js/vendor/bootstrap-timepicker.min.js"></script>
-	<script src="js/main.js" type="text/javascript">
-	</script>
+	
 	
 </head>
 <body>
+	
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"></button> <a class="navbar-brand" href="#">Square Day</a>
+
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button> 
+				<a class="navbar-brand" href="#">Square Day</a>
 			</div>
+
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
-					<li class="active">
-						<a href="#">Home</a>
-					</li>
-					<li>
-						<a href="#about">About</a>
-					</li>
-					<li>
-						<a href="#contact">Contact</a>
-					</li>
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#contact">Contact</a></li>
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">My SquareDays</a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">My SquareDays<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li>
-								<a href="#">New Day+</a>
-							</li>
-							<li class="dropdown-header">
-								My Days
-							</li>
-							<li>
-								<a href="#">Separated link</a>
-							</li>
+							<li><a href="#">New</a></li>
+							<li><a href="#">New2</a></li>
 						</ul>
 					</li>
 				</ul>
 			</div><!--/.navbar-collapse -->
+
+			<!-- </div> -->
 		</div>
 	</div>
-</body>
-</html>
+
+
+
+		
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+
+		<script src="js/vendor/parse-1.2.13.min.js"></script>
+		<script type="text/javascript" src="js/vendor/bootstrap-timepicker.min.js"></script>
+		 <script src="js/vendor/bootstrap.min.js"></script>
+		<script src="js/main.js"></script>
+	</body>
+	</html>
