--- a/itinerary.html
+++ b/itinerary.html
@@ -49,17 +49,9 @@
 							<a href="#contact">Contact</a>
 						</li>
 						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">My SquareDays</a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">My SquareDays<b class="caret"></b></a>
 							<ul class="dropdown-menu">
-								<li>
-									<a href="#">New Day+</a>
-								</li>
-								<li class="dropdown-header">
-									My Days
-								</li>
-								<li>
-									<a href="#">Separated link</a>
-								</li>
+								<li><a href="#">New</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -67,7 +59,7 @@
 			</div>
 		</div>
 	
-		<div class="col-md-8">
+		<!-- <div class="col-md-8">
 					
 						<h1>
 							Where are you?
@@ -91,7 +83,8 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
+		
 		
 		<div class="col-md-4">
 			<div class="list-group" id="itin-list">
