--- a/itinerary.html
+++ b/itinerary.html
@@ -45,9 +45,9 @@
 						<h3 class="panel-title">The Park!</h3>
 					</div>
 					<div class="col-md-6 text-right">
-						<span class="glyphicon glyphicon-plus-sign"></span>
-						<span class="glyphicon glyphicon-minus-sign"></span>
-						<span class="glyphicon glyphicon-question-sign"></span>
+						<span class="event-btn glyphicon glyphicon-plus-sign"></span>
+						<span class="event-btn glyphicon glyphicon-minus-sign"></span>
+						<span class="event-btn glyphicon glyphicon-question-sign"></span>
 					</div>
 					<!-- <div class="clearfix"></div> -->
 				</div>
