--- a/itinerary.html
+++ b/itinerary.html
@@ -34,7 +34,7 @@
 <body>
 
 	<hr>
-	<div class="container">
+	<div class="container itin">
 		
 
 
@@ -89,5 +89,9 @@
 	}
 
 	</script>
+	
+	<script src="js/itinerary.js"></script>
+	<script src="js/main.js"></script>
+	
 </body>
 </html>
