added automatic dropdown creation

--- a/menu.html
+++ b/menu.html
@@ -46,11 +46,9 @@
 					<li class="active"><a href="#">Home</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li class="dropdown">
+					<li class="dropdown" id="mySquaredays">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">My SquareDays<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">New</a></li>
-							<li><a href="#">New2</a></li>
 						</ul>
 					</li>
 				</ul>
