--- a/menu.html
+++ b/menu.html
@@ -20,11 +20,9 @@
 	</style>
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="css/main.css">
-	<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 	<link type="text/css" href="css/bootstrap-timepicker.min.css" />
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
-	
 	<link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
@@ -53,16 +51,19 @@
 					</li>
 				</ul>
 			</div><!--/.navbar-collapse -->
-
 			<!-- </div> -->
 		</div>
 	</div>
+	
+	<div class="itin"></div>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+	<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 	<script src="js/vendor/parse-1.2.13.min.js"></script>
-	<script type="text/javascript" src="js/vendor/bootstrap-timepicker.min.js"></script>
+	<script src="js/vendor/bootstrap-timepicker.min.js"></script>
 	<script src="js/vendor/bootstrap.min.js"></script>
+	<script src="js/itinerary.js"></script>
 	<script src="js/main.js"></script>
+	
 </body>
 </html>
