Added map to itinerary.js and styles in main.css

--- a/menu.html
+++ b/menu.html
@@ -24,6 +24,8 @@
 	<link type="text/css" href="css/bootstrap-timepicker.min.css" />
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" href="css/main.css" type="text/css">
+	<link rel="stylesheet" href="http://api.tiles.mapbox.com/mapbox.js/v1.5.0/mapbox.css" />
+
 </head>
 <body>
 	
@@ -55,8 +57,9 @@
 		</div>
 	</div>
 	
-	<div class="itin"></div>
+	<div class="itin"><div id="venuesMap"></div></div>
 
+	<script src="http://api.tiles.mapbox.com/mapbox.js/v1.5.0/mapbox.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 	<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 	<script src="js/vendor/parse-1.2.13.min.js"></script>
