--- a/search.html
+++ b/search.html
@@ -17,18 +17,15 @@
 		padding-bottom: 20px;
 	}
 	</style>
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
 	<link type="text/css" href="css/bootstrap-timepicker.min.css" />
 	<link rel="stylesheet" href="css/main.css" type="text/css" />
 	
-	
-	
 	<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js" type="text/javascript"></script>
 	<script src="js/vendor/jquery-1.10.1.js" type="text/javascript"></script>
-	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 	<script src="js/vendor/parse-1.2.13.min.js"></script>
 	<script type="text/javascript" src="js/vendor/bootstrap-timepicker.min.js"></script>
+	
 	<script src="js/main.js" type="text/javascript">
 	</script>
 	
@@ -36,30 +33,39 @@
 <body>
 
 	
+	
 	<div class="col-md-8">
 		
-		<h1>
-			Where are you?
-		</h1><input type="text" name="location" id="venueLocation">
-		<h1>
-			What are you looking for?
-		</h1><input type="text" name="name" id="venueName">
+		<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#addNew">
+			+ Add New
+		</button>
 		
-		
-		<div class="list-group" id="results-list">
-			
-			<ul id="venueList"></ul>
-			
-		</div>
-		
-		<div class="container" >
-			<div class="list-group">
-				<h4 id="currItinTitle" class="list-group-item-heading">My Square Day Itin</h4>
-				<ul id="currItin"></ul>
-			</div>
-		</div>
-	</div>
+		<div class="modal fade" id="addNew" role="dialog" tabindex="-1" aria-hidden="true">
+			<div class ="modal-dialog">
+				<div class="modal-header">
+					 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				    <h4 class="modal-title">New Venue</h4>
+				 </div>
+				<div class="modal-content">
+					<p>
+						<div class="input-group">
+						<input type="text" class="form-control" placeholder="Where are you?" name="location" id="venueLocation">
+						</div>
+						
+						<div class="input-group">
+							<input type="text" class="form-control" placeholder="What are you looking for?" name="location" id="venueName">
+							</div>
+							
+						<div class="list-group" id="results-list">
+							<ul id="venueList"></ul>	
+						</div>
+	
+					</p>
 
+
+</div> <!--/modal dialog-->
+</div> <!--/modal content-->
+ 
 
 	<div class="modal fade" id="dialog" role="dialog" tabindex="-1" aria-hidden="true">
 		<div class="modal-dialog">
