--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,6 @@
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" href="css/main.css" type="text/css">
 	<link rel="stylesheet" href="http://api.tiles.mapbox.com/mapbox.js/v1.5.0/mapbox.css" />
-
 </head>
 <body>
 	
@@ -57,7 +56,8 @@
 		</div>
 	</div>
 	
-	<div class="itin"><div id="venuesMap"></div></div>
+	<div id="venuesMap"></div>
+	<div class="itin"></div>
 
 	<script src="http://api.tiles.mapbox.com/mapbox.js/v1.5.0/mapbox.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
