main.js and index.html updates

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 					<li class="dropdown" id="mySquaredays">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">My SquareDays<b class="caret"></b></a>
 						<ul class="dropdown-menu">
+							<span id="auto"></span>
+							<span id="addnew">
+								<li class="divider"></li>
+								<li><button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-plus"></span> Add New Itenerary</button>
+							</span>
 						</ul>
 					</li>
 				</ul>
