add save button to search.html

--- a/search.html
+++ b/search.html
@@ -105,7 +105,7 @@ function displayTimeDialog(){
 	
 	$("#venueMeta").html("<img width='20' src='./css/img/ajax_loader.gif' />");
 	var moreHTML = "";
-	moreHTML = moreHTML +'<div class="input-append bootstrap-timepicker"><span>Start Time </span></br><input id="timepickerStart" type="text" class="input-small"><span class="add-on"><i class="icon-time"></i></span></div><div class="input-append bootstrap-timepicker"><span>End Time </span> </br><input id="timepickerEnd" type="text" class="input-small"><span class="add-on"><i class="icon-time"></i></span></div><div class="input-group"><br /><input type="text" class="input-large" placeholder="Description" id="userDecription"></div>';
+	moreHTML = moreHTML +'<div class="input-append bootstrap-timepicker"><span>Start Time </span></br><input id="timepickerStart" type="text" class="input-small"><span class="add-on"><i class="icon-time"></i></span></div><div class="input-append bootstrap-timepicker"><span>End Time </span> </br><input id="timepickerEnd" type="text" class="input-small"><span class="add-on"><i class="icon-time"></i></span></div><div class="input-group"><br /><input type="text" class="input-large" placeholder="Description" id="userDecription"></div><button type="button" class="btn btn-primary" id="sendVenue">Save</button>';
 	$("#venueMeta").html(moreHTML);
 
 }
