playing with the splash page text

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
 	<div id="introHome">
 		<h1>SquareDay</h1>
-		<h2>Tagline here</h2>
-		<p>More infior adnfasdnjfjakld fajf jadfj ajlf; ja;j fl;asjdfk jakls;djf ;lkajskl;df ja;lsjf ;lkajsf ;ljals;dfj l;af</p>
+		<h2>you've never looked so organized.</h2>
+		<p>SquareDay organizes and visualize your plans using data from the FourSquare API. Each fully customizable itinerary contains information about where you'll be and when allowing you to plan and map your activities.</p>
 	</div>
 	<div id="introAbout">
 		<h1>SquareDay</h1>
