adds intro box new itin shortcut

--- a/index.html
+++ b/index.html
@@ -65,10 +65,18 @@
 		</div>
 
 		<div id="introHome">
-			<h1>SquareDay</h1>
-			<h2>you've never looked so organized.</h2>
-			<p>SquareDay organizes and visualize your plans using data from the FourSquare API. Each fully customizable itinerary contains information about where you'll be and when allowing you to plan and map your activities.</p>
-		</div>
+			<div class="row">
+				<div class="col-md-10">
+					<h1>SquareDay</h1>
+					<h2>you've never looked so organized.</h2>
+					<p>SquareDay organizes and visualize your plans using data from the FourSquare API. Each fully customizable itinerary contains information about where you'll be and when allowing you to plan and map your activities.</p>
+				</div>
+				<div class="col-md-2 text-center">
+						<h4 class="text-muted intro-new-header">New Itinerary</h4>
+						<span class="glyphicon glyphicon-plus-sign intro-new-btn" data-toggle="modal" data-target="#addNewItin"></span>
+				</div>
+			</div>	
+		</div>	
 		<div id="introAbout">
 			<h1>SquareDay</h1>
 		</div>
@@ -107,9 +115,6 @@
 				</div> <!--/modal content-->
 			</div> <!--/modal fade -->
 			
-			
-			
-			<!-- Modal -->
 			<div class="modal fade" id="addNewItin" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-content">
