updates to intro paragraph. less insulting now

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 			<div class="row">
 				<div class="col-md-10">
 					<h1>SquareDay</h1>
-					<h2>you've never looked so organized.</h2>
-					<p>SquareDay organizes and visualize your plans using data from the FourSquare API. Each fully customizable itinerary contains information about where you'll be and when allowing you to plan and map your activities.</p>
+					<h2>you've never been so organized.</h2>
+					<p>SquareDay organizes and visualizes your plans using data from the FourSquare and Mapbox APIs. Each fully customizable itinerary contains information about where you'll be and sre, allowing you to focus on what you'll be doing there.</p>
 				</div>
 				<div class="col-md-2 text-center">
 						<h4 class="text-muted intro-new-header">New Itinerary</h4>
