updates to intro paragraph. even less insulting now

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div class="row">
 				<div class="col-md-10">
 					<h1>SquareDay</h1>
-					<h2>you've never been so organized.</h2>
+					<h2>you've never been this organized.</h2>
 					<p>SquareDay organizes and visualizes your plans using data from the FourSquare and Mapbox APIs. Each fully customizable itinerary contains information about where you'll be and sre, allowing you to focus on what you'll be doing there.</p>
 				</div>
 				<div class="col-md-2 text-center">
