Added about section courtest of @hilagutfreund

--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
 	</div>	
 	<div id="introAbout">
 		<h1>SquareDay</h1>
+		<p>Squareday is a FourSquare based schedule generator, allowing users to create itineraries with venues and times. This allows the user to have a basic schedule view as well as a calendar representation of all the places the user wants to visit according to their itinerary.</p> 
+		<p>Squareday offers the functionality of a location based schedule creator that helps a user visualize their schedule coordinates in addition to just displaying when different events occur. This visualization helps organize the day by time and location. </p>
+		<p><b>The Squareday team is made up of Columbia University students studying CS4170 User Interface Design:</b></p>
+		<ul>
+			<li>Sophie Fader
+			<li>Hila Gutfreund</li>
+			<li>Nikanth Patel</li>
+			<li>William Falk-Wallace</li>
+		</ul>
+		<p>Please email us at squareday@googlegroups.com</p>
 	</div>
 	
 	<div id="venuesMap"></div>
