--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>SquareDay</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
+	<link rel="icon" href="http://favicon-generator.org/favicons/2013-12-05/6bd878ecbaf756b5cef4e06aae1e49c6.ico">
 
 	<!-- vendor stylesheets-->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
