button class updates

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		</div>	
 		<div class="container text-center">
 			<div class="btn-group intro-dd-wrapper">
-				<button type="button" class="btn btn-default dropdown-toggle intro-dd" data-toggle="dropdown">
+				<button type="button" class="s dropdown-toggle intro-dd" data-toggle="dropdown">
 					My SquareDays <span class="caret"></span>
 				</button>
 				<ul class="dropdown-menu intro-dd-list" role="menu">
