--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<li class="active" id="home"><a href="#">Home</a></li>
 				<li id="about"><a href="#">About</a></li>
 			</ul>
-			<ul class="nav navbar-nav navbar-right">
+			<ul class="nav navbar-nav navbar-right hide" id="menu-bar-items">
 				<li class="dropdown" id="mySquaredays">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">My SquareDays<b class="caret"></b></a>
 					<ul class="dropdown-menu">
@@ -58,8 +58,6 @@
 					</ul>
 				</li>
 			</ul>
-			<!-- <button id="deleteItinButton" class="btn btn-primary btn-lg">Delete This Itinerary</button> -->
-			<!-- <button id="addNewButton" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#addNew">Add New Venue</button> -->
 		</div><!--/.navbar-collapse -->
 	</div>
 
