--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right hide" id="menu-bar-items">
 				<li class="dropdown" id="mySquaredays">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">My SquareDays<b class="caret"></b></a>
+					<a href="#" class="dropdown-toggle" id="menu-dd" data-toggle="dropdown">My SquareDays<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<span class="auto"></span>
 						<span id="addnew">
