new itin modal button

--- a/index.html
+++ b/index.html
@@ -140,8 +140,10 @@
 								<div class="input-group text-center">
 									<input type="text" class="form-control" placeholder="What should it be named?" name="itinName" id="itinName">
 								</div>
+								<div class="input-group text-center">
+									<button type="button" id="addNewItinButton" class="btn btn-primary btn-lg">Add</button>
+								</div>
 							</div>
-							<button type="button" id="addNewItinButton" class="btn btn-primary btn-lg">Add</button>
 						</div><!-- /.modal-content -->
 					</div><!-- /.modal-dialog -->
 				</div><!-- /.modal -->
