naming consistency in the dropdown Itinerary vs SquareDay fix

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<ul class="dropdown-menu intro-dd-list" role="menu">
 					<span class="auto intro-dd text-left"></span>
 					<li class="divider"></li>
-					<li><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addNewItin"><span class="glyphicon glyphicon-plus"></span> Add New Itinerary</button></li>
+					<li><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addNewItin"><span class="glyphicon glyphicon-plus"></span> Add New SquareDay</button></li>
 				</ul>
 			</div>
 		</div>
