--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					<div class="modal-content">
 						<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h4 class="modal-title">New Itinerary</h4>
+							<h4 class="modal-title">New SquareDay</h4>
 						</div>
 						<div class="modal-body">
 							<div class="input-group text-center">
@@ -192,7 +192,7 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h4 class="modal-title">New Itinerary</h4>
+					<h4 class="modal-title">New SquareDay</h4>
 				</div>
 				<div class="modal-body">
 					<div class="input-group text-center">
