edit venue fixed

--- a/index.html
+++ b/index.html
@@ -169,17 +169,7 @@
 							<input type="text" class="form-control" id="timepickerEnd">
 						</div>
 						<div class="input-group">
-							<input type="text" class="form-control" placeholder="Where are you?" name="location" id="venueLocation">
-						</div>
-						
-						<div class="input-group">
-							<input type="text" class="form-control" placeholder="What are you looking for?" name="location" id="venueName">
-						</div>
-						
-						<div class="list-group" id="results-list">
-							<ul id="venueList"></ul>	
-							<div id="venueMeta"> 
-							</div>
+							<textarea class="input-large" rows="3" placeholder="Description" id="userDescription"></textarea>
 						</div>
 					</p>
 				</div>
