--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
 						<div class="input-group">
 							<textarea class="input-large" rows="3" placeholder="Description" id="userDescription"></textarea>
 						</div>
+						<div class="input-group">
+							<button type="button" id="editVenue" class="btn btn-primary btn-sm">Submit</button>
+						</div>
 					</p>
 				</div>
 			</div> <!--/modal dialog-->
