save not submit

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 							<textarea class="input-large" rows="3" placeholder="Description" id="userDescription"></textarea>
 						</div>
 						<div class="input-group">
-							<button type="button" id="editVenue" class="btn btn-primary btn-sm">Submit</button>
+							<button type="button" id="editVenue" class="btn btn-primary btn-sm">Save</button>
 						</div>
 					</p>
 				</div>
