--- a/index.html
+++ b/index.html
@@ -177,6 +177,23 @@
 				</div><!-- /.modal-dialog -->
 			</div><!-- /.modal -->
 			
+			<div class="modal fade" id="areYouSure" tabindex="-1" role="dialog" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h4 class="modal-title">Are you sure you want to delete this SquareDay?</h4>
+						</div>
+						<div class="modal-body">
+							<div class="input-group text-center">
+								<button type="button" id="areYouSureButton" class="btn btn-primary btn-sm">Delete</button>
+								<button type="button" id="areYouSureNoButton" class="btn btn-primary btn-sm">Cancel</button>
+							</div>
+						</div>
+					</div><!-- /.modal-content -->
+				</div><!-- /.modal-dialog -->
+			</div><!-- /.modal -->
+			
 			<div class="modal fade" id="editVenue" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-content">
