MARKERS ARE DELETED

--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
 		</div>
 		
 		<div id="venuesMap"></div>
+		
 		<div class="col-md-8 col-md-offset-2">
+		
 			<div class="itin"></div>
+			
 			<div class="modal fade" id="addNew" role="dialog" tabindex="-1" aria-hidden="true">
 				<div class ="modal-dialog">
 					<div class="modal-content">
-
-
-
 						<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 							<h4 class="modal-title">New Venue</h4>
@@ -265,19 +265,19 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h4 class="modal-title">Rename</h4>
+					<h4 class="modal-title">rename</h4>
 				</div>
 				<div class="modal-body">
 					<div class="input-group">
 						<input type="text" class="form-control" placeholder="What would you like the name to be?" name="itinRename" id="itinRename">
 					</div>
+					<button type="button" id="renameItinButton" class="btn btn-primary btn-lg">Rename</button>
 				</div>
-				<button type="button" id="renameItinButton" class="btn btn-primary btn-lg">Rename</button>
 			</div><!-- /.modal-content -->
 		</div><!-- /.modal-dialog -->
 	</div><!-- /.modal -->
 	
 </div> <!--/col-md-8 -->
 
-</body>
+</body>w
 </html>
