--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<ul class="dropdown-menu">
 						<span class="auto"></span>
 						<span id="addnew">
-							<li><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addNewItin"><span class="glyphicon glyphicon-plus"></span> Add New Itinerary</button>
+							<li><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addNewItin"><span class="glyphicon glyphicon-plus"></span> Add New SquareDay</button>
 							</li>
 						</span>
 					</ul>
