added href tag for pdf manual

--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
 				<li> You can edit each venue as you please! They will automatically be organized by time. </li>
 			</ul>
 			
-			For more detailed help & instructions download the user manual here. 
+			For more detailed help & instructions download the user manual <a href="userManual.pdf">here</a>.
+			
+
 		</p>
 	</div>
 	
