spelling mistake fixed in help section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		<h1>SquareDay</h1>
 		<p> 
 			<ul> <b> Vocab Lesson </b>
-				<li> <u>SquareDay</u>: A customizable itinerary displayed in time order and in a representatitive map. </li>
+				<li> <u>SquareDay</u>: A customizable itinerary displayed in time order and in a representative map. </li>
 				<li> <u> Venue</u>: Any location available from FourSquare can be added to your itinerary as a venue. The user can add time information and a description to each location </li>
 			</ul>
 			
