rename button fix

--- a/index.html
+++ b/index.html
@@ -249,8 +249,10 @@
 						<div class="input-group">
 							<input type="text" class="form-control" placeholder="What would you like the name to be?" name="itinRename" id="itinRename">
 						</div>
+						<div class="input-group">
+							<button type="button" id="renameItinModalButton" class="btn btn-primary btn-lg">Rename</button>
+						</div>
 					</div>
-					<button type="button" id="renameItinButton" class="btn btn-primary btn-lg">Rename</button>
 				</div><!-- /.modal-content -->
 			</div><!-- /.modal-dialog -->
 		</div><!-- /.modal -->
