added new manual and video to the help page

--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
 				<li> You can edit each venue as you please! They will automatically be organized by time. </li>
 			</ul>
 			
-			For more detailed help & instructions download the user manual <a href="userManual.pdf">here</a>.
+			For more detailed help & instructions download the user manual <a href="SquareDay_user.pdf">here</a> or watch our demo below:
+			<br>
+			<br>
+			<center><video width="560" height="315" controls><source src="SquareDay_video.mp4" type="video/mp4" </video></center>
 			
 
 		</p>
