moves video into img folder

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			For more detailed help & instructions download the user manual <a href="SquareDay_user.pdf">here</a> or watch our demo below:
 			<br>
 			<br>
-			<center><video width="560" height="315" controls><source src="SquareDay_video.mp4" type="video/mp4" </video></center>
+			<center><video width="560" height="315" controls><source src="img/SquareDay_video.mp4" type="video/mp4" </video></center>
 			
 
 		</p>
